[tool.poetry]
name = "markdown-toolkit"
version = "0.1.0"
description = "Utility package for programmatically creating markdown documents"
license = "MIT"
readme = "README.md"
keywords = ["markdown"]
homepage = "https://github.com/danielloader/markdown-toolkit/"
repository = "https://github.com/danielloader/markdown-toolkit/"
include = [
    "LICENSE",
]
authors = ["Daniel Loader <hello@danielloader.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
