[tool.poetry]
name = "markdown-toolkit"
version = "0.2.0"
description = "Utility package for programmatically creating markdown documents"
license = "MIT"
readme = "README.md"
keywords = ["markdown"]
homepage = "https://github.com/danielloader/markdown-toolkit/"
repository = "https://github.com/danielloader/markdown-toolkit/"
include = [
    "LICENSE",
]
authors = ["Daniel Loader <hello@danielloader.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.13.9"

[tool.poetry.group.helpers.dependencies]
docstring-parser = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
