[tool.poetry]
name = "markdown-toolkit"
version = "0.3.0"
description = "Utility package for programmatically manipulating markdown documents."
license = "MIT"
readme = "README.md"
keywords = ["markdown"]
homepage = "https://github.com/danielloader/markdown-toolkit/"
repository = "https://github.com/danielloader/markdown-toolkit/"
include = [
    "LICENSE",
]
authors = ["Daniel Loader <hello@danielloader.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
pytest = "^5.2"
testfixtures = "^6.18.5"

[tool.poetry.group.docs]
optional=true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.15"
mkdocstrings = "^0.18.1"
mike = "^1.1.2"
setuptools = "^62.3.2"
markdown-exec = "^0.6.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
